@@ -281,14 +281,14 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:TWAIN 2.1 App Sample"
-        "ProductCode" = "8:{65FDD48E-1622-4581-9806-CFE13BDB5F1A}"
-        "PackageCode" = "8:{4218BF0E-8D18-4FF7-AD75-0338A1EA63C8}"
+        "ProductCode" = "8:{A7BF9CE0-5202-4314-8411-75C44C35ACC0}"
+        "PackageCode" = "8:{DC12C8BD-9AEA-4C7B-9BD3-605194DF2FCB}"
         "UpgradeCode" = "8:{3093BF18-1ADD-4A3C-AE32-8F818163DFAF}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:TRUE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:2.1.1"
+        "ProductVersion" = "8:2.1.2"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
